[bumpversion]
current_version = 0.1.0
commit = True
tag = False

[bumpversion:file:lyatools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = lyatools
version = attr: lyatools.__version__
author = Andrei Cuceu
author_email = andreicuceu@gmail.com
description = Tools for Lyman-alpha forest analyses
long_description = file: README.md
license = GNU General Public License v3.0
project_urls = 
	Bug Reports=https://github.com/andreicuceu/lyatools/issues
	Source=https://github.com/andreicuceu/lyatools

[options]
python_requires = >=3.7
install_requires = file: requirements.txt

[options.entry_points]
console_scripts = 
	lyatools-run = lyatools.scripts.run:main
	lyatools-stack-export = lyatools.scripts.stack_export:main
	lyatools-make-dla-cat = lyatools.scripts.make_dla_cat:main

[options.extras_require]
dev = 
	pytest
	flake8
	bump2version
